# pds

./: CMakeLists.txt  template.pbs
01ParPi/: build.sh  clean.sh  parpi.pbs  rapport.txt
01ParPi/other/: .main.cpp.swp  main.cpp
01ParPi/parfor/: CMakeLists.txt  main.cpp
01ParPi/reduction/: CMakeLists.txt  main.cpp
02ConvMP/: build.sh  clean.sh  convmp.pbs  parpi.pbs  rapport.tex  rawdata.xlsx  results.txt
02ConvMP/data/kernel/: params.txt
02ConvMP/src/: CMakeLists.txt  imgutil.cpp  imgutil.h  main.cpp
